--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "blob-stream": "^0.1.3",
     "bootstrap": "^4.3.1",
     "bs-custom-file-input": "^1.3.4",
+    "chart.js": "^2.9.4",
     "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
