--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "bootstrap": "^4.3.1",
     "bs-custom-file-input": "^1.3.4",
     "chart.js": "^2.9.4",
+    "chart.js-plugin-labels-dv": "^5.0.1-beta",
+    "chart.piecelabel.js": "^0.15.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
     "classnames": "^2.2.6",
