Add automated testing infrastructure and configuration
Comprehensive testing setup across the project:
- Configure Vitest for unit testing
- Set up @testing-library/react for component testing
- Add coverage reporting and thresholds
- Create test documentation
- Add test scripts to package.json
- Configure .gitignore for test artifacts

The testing infrastructure includes:
- Unit tests for services and utilities
- Component tests with React Testing Library
- Coverage requirements (80% threshold)
- CI integration with coverage checks

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,7 @@
 node_modules/.cache
 node_modules/
 build/
-# End of https://www.gitignore.io/api/visualstudiocode
-/nbproject/private/
+# Testing
+/coverage
+coverage/
+*.lcov
