--- a/package.json
+++ b/package.json
@@ -101,11 +101,16 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-arrow-functions": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^12.1.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
     "eslint": "^7.32.0",
@@ -123,6 +128,7 @@
     "style-loader": "^1.1.4",
     "ttf-loader": "^1.0.2",
     "url-loader": "^4.1.0",
+    "vitest": "^2.1.8",
     "webpack-cli": "^3.3.11",
     "workbox-webpack-plugin": "^5.1.2"
   },
@@ -131,9 +137,9 @@
     "prod": "webpack --mode=production",
     "start": "PORT=4202 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:cov": "npm test -- --coverage --watchAll=false",
-    "test:debug": "react-scripts --inspect-brk test --runInBand",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage --bail 1",
     "eject": "react-scripts eject"
   },
   "bugs": {
