Add test framework
Added a test framework with coverage reporting for the react frontend app

Including the following changes:
- Update vitest.config.js with coverage settings and JSX transformation
- Configure CI workflow to create coverage directories
- Set initial coverage thresholds to 0 for gradual improvement
- Add Code Climate test reporter integration
- Update job name to test to match npm script (test:coverage)
- Set up baseline framework for Cypress and Vitest tests to ensure
consistent testing environment and facilitate future test development.
- Add vite@4.5.2 as a dev dependency for vitest support
- Update @vitejs/plugin-react to ^4.2.1 for compatibility with vite 4.x
- Fix dependency resolution for test environment setup
- Move test data to cypress/fixtures/auth.json for better maintainability
- Remove redundant setup.cy.js and example fixture files
- Update .gitignore to exclude Cypress generated files
- Clean up test assertions and error handling in authentication tests
- Improve test readability with better comments and structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
@@ -17,3 +16,10 @@ node_modules/
 build/
 # End of https://www.gitignore.io/api/visualstudiocode
 /nbproject/private/
+coverage/
+/coverage/
+
+# Cypress
+cypress/screenshots/
+cypress/videos/
+cypress/downloads/
