ci: align workflow naming conventions and add PR template
- Rename workflow file to continuous-integration.yml
- Update job name to test to match npm script (test:coverage)
- Add pull request template for standardization

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -22,7 +22,7 @@ env:
   NODE_VERSION: '16'
 
 jobs:
-  continuous-integration:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
