ci: refine CI pipeline configuration
- Update paths-ignore to ensure critical files trigger builds
- Maintain focus on push events, the pull request trigger is redundant

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,18 +2,13 @@ name: Continuous Integration Pipeline
 
 on:
   push:
-    branches:
-      - '**'
     paths-ignore:
       - '**.md'
-      - 'docs/**'
-      - '.gitignore'
-      - 'LICENSE'
-  pull_request:
-    branches:
-      - '**'
-    paths-ignore:
-      - '**.md'
+      - '**.txt'
+      - '**.xml'
+      - '**.sql'
+      - '**.csv'
+      - '**.zip'
       - 'docs/**'
       - '.gitignore'
       - 'LICENSE'
