--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-grid-layout": "^0.16.6",
     "react-i18next": "^11.3.3",
     "react-idle-timer": "^4.3.6",
+    "react-loading-skeleton": "^3.5.0",
     "react-month-picker": "^2.2.0",
     "react-multi-select-component": "^4.0.2",
     "react-multiselect-checkboxes": "^0.1.1",
