--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-grid-layout": "^0.16.6",
     "react-i18next": "^11.3.3",
     "react-idle-timer": "^4.3.6",
+    "react-loading-skeleton": "^3.5.0",
     "react-month-picker": "^2.2.0",
     "react-multi-select-component": "^4.0.2",
     "react-multiselect-checkboxes": "^0.1.1",
@@ -107,15 +108,21 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@testing-library/cypress": "^10.0.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^2.2.0",
     "@vitest/coverage-v8": "^2.1.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
+    "cypress": "^12.0.0",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
+    "jsdom": "^16.7.0",
     "path": "^0.12.7",
     "raw-loader": "^4.0.1",
     "react-dnd": "^11.1.3",
@@ -123,6 +130,7 @@
     "react-scripts": "^3.0.1",
     "sass": "^1.55.0",
     "sass-loader": "^8.0.2",
+    "start-server-and-test": "^2.0.9",
     "style-loader": "^1.1.4",
     "ttf-loader": "^1.0.2",
     "url-loader": "^4.1.0",
@@ -136,7 +144,12 @@
     "start": "PORT=4202 react-scripts start",
     "build": "react-scripts build",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage=true",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test 'npm run dev' http://localhost:4202 cypress:run",
+    "test:all": "npm run test:coverage && npm run test:e2e",
     "eject": "react-scripts eject"
   },
   "bugs": {
@@ -151,14 +164,6 @@
     "not ie <= 10",
     "not op_mini all"
   ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!**/*index.js",
-      "!src/serviceWorker.js",
-      "!src/polyfill.js"
-    ]
-  },
   "engines": {
     "node": ">=8.10",
     "npm": ">=6"
