--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "react-grid-layout": "^0.16.6",
     "react-i18next": "^11.3.3",
     "react-idle-timer": "^4.3.6",
-    "react-loading-skeleton": "^3.5.0",
     "react-month-picker": "^2.2.0",
     "react-multi-select-component": "^4.0.2",
     "react-multiselect-checkboxes": "^0.1.1",
@@ -112,7 +111,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^2.1.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
@@ -134,6 +133,7 @@
     "style-loader": "^1.1.4",
     "ttf-loader": "^1.0.2",
     "url-loader": "^4.1.0",
+    "vite": "^4.5.2",
     "vitest": "^2.1.8",
     "webpack-cli": "^3.3.11",
     "workbox-webpack-plugin": "^5.1.2"
