--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
@@ -19,3 +18,8 @@ build/
 /nbproject/private/
 coverage/
 /coverage/
+
+# Cypress
+cypress/screenshots/
+cypress/videos/
+cypress/downloads/
