--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
-  "name": "@coreui/coreui-pro-react-admin-template",
-  "version": "2.6.0",
-  "description": "CoreUI Pro React Admin Template",
-  "author": {
-    "name": "Łukasz Holeczek",
-    "url": "http://holeczek.pl",
-    "github": "https://github.com/mrholek",
-    "twitter": "https://twitter.com/lukaszholeczek"
-  },
-  "contributors": [
-    {
-      "name": "Andrzej Kopański",
-      "url": "https://github.com/xidedix"
-    }
-  ],
-  "homepage": ".",
-  "copyright": "Copyright 2017-2019 creativeLabs Łukasz Holeczek",
-  "license": "https://coreui.io/pro/license/",
-  "private": true,
+  "name": "fasp-core-ui",
+  "version": "2.95.13377",
+  "description": "Quantification Analytics Tool",
+  "private": false,
+  "homepage": "https://www.quantificationanalytics.org",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-pro-react-admin-template.git"
+    "url": "git@github.com:FASP-QAT/fasp-core-ui.git"
   },
   "dependencies": {
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
